syntax = "proto3";
package cometbft.types.v3;

option go_package = "github.com/cometbft/cometbft/api/cometbft/types/v3";

import "cometbft/types/v1/params.proto";
import "cometbft/types/v2/params.proto";
import "gogoproto/gogo.proto";

option (gogoproto.equal_all) = true;

// ConsensusParams contains consensus critical parameters that determine the
// validity of blocks.
message ConsensusParams {
  v2.BlockParams      block     = 1;
  v1.EvidenceParams   evidence  = 2;
  v1.ValidatorParams  validator = 3;
  v2.VersionParams    version   = 4;
  ABCIParams          abci      = 5;
}

// ABCIParams configure functionality specific to the Application Blockchain Interface.
message ABCIParams {
  // vote_extensions_enable_height configures the first height during which
  // vote extensions will be enabled. During this specified height, and for all
  // subsequent heights, precommit messages that do not contain valid extension data
  // will be considered invalid. Prior to this height, vote extensions will not
  // be used or accepted by validators on the network.
  //
  // Once enabled, vote extensions will be created by the application in ExtendVote,
  // passed to the application for validation in VerifyVoteExtension and given
  // to the application to use when proposing a block during PrepareProposal.
  int64 vote_extensions_enable_height = 1;
}
